# pdf-to-book

./: .gitignore  README.md  pyproject.toml
bookpdf/: __main__.py  coordinates.py  pagination.py  pdf.py
pdfbook/: __main__.py  pdf.py
src/pdftobook/: __main__.py  coordinates.py  pagination.py  pdf.py
