[project]
name = "pdftobook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pypdf[image]>=4.3.1", "click>=8.1.7"]

[project.scripts]
pdftobook = "pdftobook.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
